#454460 & #454370: Fixed accordion tabs, whitespaces, footer and header styles

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,10 +3,8 @@
 .footer {
 	background-color: #ef7011;
 	padding: 50px 40px;
-	width: 100%;
-	bottom: 0;
-	margin: 0 -60px;
-	width: calc(100vw - 15px);
+	margin-left: -60px;
+  margin-right: -60px;
 
 	&__company {
 		color: white;
